Add README.md, delete useless header files

--- a/exp1/Makefile
+++ b/exp1/Makefile
@@ -6,10 +6,13 @@ TARGET = $(patsubst %.c, %, $(SRC))
 
 all: $(TARGET)
 
+run: $(TARGET)
+	./$<
+
 $(TARGET): %: %.c
 	$(CC) $(CFLAGS) $^ -o $@
 
-.PHONY: clean
+.PHONY: clean run
 
 clean: 
 	rm $(TARGET)
